--- a/vaj.html
+++ b/vaj.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Vaj.css">
+    <link rel="stylesheet" href="vaj.css">
 </head>
 <body>
     <h4 style="color: rgb(15, 104, 15); padding-top: 25; position: fixed; top: 10px; left: 10px;">
