--- a/Kiborgon elmélet.html
+++ b/Kiborgon elmélet.html
@@ -14,6 +14,11 @@
     </h5>
        <h2>Weaver Ágnes</h2>
     <h1>Kiborgon elmélet</h1>
+    <a target="blank" href="szinopszis2.html">
+       
+       <img src="szinopszis.jpg" alt="en">
+         
+    </a>
         <h2>Három felvonás</h2>
     <h6>/   <em>Kiborgon testet ölt</em>   /</h6>
     <h6>/   <em>Az alap leckék</em>   /</h6>
