--- a/szin.html
+++ b/szin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>szindarab</title>
-    <link rel="stylesheet" href="szin.css">
+    <link rel="stylesheet" href="szindarab.css">
 </head>
 
 <body>
