--- a/vajon.html
+++ b/vajon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Vaj.css">
+    <link rel="stylesheet" href="Vajon.css">
 </head>
 <body>
     <h4 style="color: rgb(15, 104, 15); padding-top: 25; position: fixed; top: 10px; left: 10px;">
@@ -38,6 +38,6 @@
 <h2>Tán lesz valaha bárki, aki majd eltörli,</h2>
 <h2 style="margin-bottom: 60px;">És a vajon szó többé már nem fog létezni?</h2>
     
-    <script src="Vaj.js"></script>
+    <script src="Vajon.js"></script>
 </body>
 </html>
