--- a/vers.html
+++ b/vers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Versek</title>
-    <link rel="stylesheet" href="vers.css">
+    <link rel="stylesheet" href="versek.css">
 </head>
 
 <body>
@@ -19,58 +19,58 @@
     <h1 class="cim">Filozófia</h1>
 
 
-<a target="blank" href="vaj.html">
+<a target="blank" href="vajon.html">
     <h2>1. Vajon?</h2>
 </a>
 
-<a target="blank" href="Egy por élettel játszik.html">
+<a target="blank" href="Egy por élettel játszik egy pók.html">
     <h2>2. Egy por élettel játszik a pók</h2>
 </a>
 
-<a target="blank" href="A művészet.html">
+<a target="blank" href="A művészet titka.html">
     <h2>3. A művészet titka</h2>
 </a>
 
-<a target="blank" href="Mi végre.html">
+<a target="blank" href="Mi végre a sors.html">
     <h2>4. Mi végre a sors? Mi végre az élet?</h2>
 </a>
 
-<a target="blank" href="rabszolga.html">
+<a target="blank" href="Az örök rabszolga.html">
     <h2>5. Az örök rabszolga</h2>
 </a>
 
-<a target="blank" href="Az udvari.html">
+<a target="blank" href="Az udvari tölgyfa.html">
     <h2>6. Az udvari tölgyfa</h2>
 </a>
-<a target="blank" href="Ír.html">
+<a target="blank" href="Írok.html">
     <h2>7.	Írok</h2>
 </a>
 
-<a target="blank" href="Peni.html">
+<a target="blank" href="Penitencia.html">
     <h2>8.	Penitencia</h2>
 </a>
 
-<a target="blank" href="Csak az ég.html">
+<a target="blank" href="Csak az ég tudja.html">
     <h2>9.	Csak az ég tudja</h2>
 </a>
 
-<a target="blank" href="Vészjósló.html">
+<a target="blank" href="Vészjósló az arcom.html">
     <h2>10.	Vészjósló az arcom</h2>
 </a>
 
-<a target="blank" href="Utazás.html">
+<a target="blank" href="Utazás az Önvalóm felé.html">
     <h2>11.	Utazás az Önvalóm felé</h2>
 </a>
 
-<a target="blank" href="Láncszemek .html">
+<a target="blank" href="Láncszemek vagyunk.html">
     <h2>12.	Láncszemek vagyunk</h2>
 </a>
 
-<a target="blank" href="A szélhámos.html">
+<a target="blank" href="A szélhámos költő.html">
     <h2>13.	A szélhámos költő</h2>
 </a>
 
-<a target="blank" href="Vonatról.html">
+<a target="blank" href="Vonatról kitekintve.html">
     <h2>14.	Vonatról kitekintve</h2>
 </a>
 
@@ -81,134 +81,134 @@
 <h1 class="cim">Szerelem</h1>
 
 
-<a target="blank" href="A Kelenföldi.html">
+<a target="blank" href="A Kelenföldi pályaudvaron.html">
     <h2>16.	A Kelenföldi pályaudvaron</h2>
 </a>
 
-<a target="blank" href="Két szív.html">
+<a target="blank" href="Két szív csak együtt teljesség.html">
     <h2>17.	Két szív csak együtt teljesség</h2>
 </a>
 
-<a target="blank" href="Ha akarod.html">
+<a target="blank" href="Ha akarod - ha akarom.html">
     <h2>18.	Ha akarod - ha akarom</h2>
 </a>
 
-<a target="blank" href="Ami.html">
+<a target="blank" href="Ami igazi kincs.html">
     <h2>19.	Ami igazi kincs</h2>
 </a>
 
-<a target="blank" href="Csak egyet.html">
+<a target="blank" href="Csak egyet nem.html">
     <h2>20.	Csak egyet nem</h2>
 </a>
 
-<a target="blank" href="Lelkem.html">
+<a target="blank" href="Lelkem a lelkedhez.html">
     <h2>21.	Lelkem a lelkedhez</h2>
 </a>
 
-<a target="blank" href="Forrón.html">
+<a target="blank" href="Forrón szeretni.html">
     <h2>22.	Forrón szeretni</h2>
 </a>
 
-<a target="blank" href="Gazdag.html">
+<a target="blank" href="Gazdag aratásom.html">
     <h2>23.	Gazdag aratásom</h2>
 </a>
 
-<a target="blank" href="Kegyes.html">
+<a target="blank" href="Kegyes búcsúzás.html">
     <h2>24.	Kegyes búcsúzás</h2>
 </a>
 
-<a target="blank" href="Kilenc.html">
+<a target="blank" href="Kilenc év múlva.html">
     <h2>25.	Kilenc év múlva</h2>
 </a>
 
-<a target="blank" href="ünnep.html">
+<a target="blank" href="Örömünnep.html">
     <h2>26.	Örömünnep</h2>
 </a>
 
-<a target="blank" href="Tánc.html">
+<a target="blank" href="Táncoljunk.html">
     <h2>27.	Táncoljunk</h2>
 </a>
 
-<a target="blank" href="Plátói.html">
+<a target="blank" href="Plátói kedvesként.html">
     <h2>28.	Plátói kedvesként</h2>
 </a>
 
-<a target="blank" href="Szabad ut.html">
+<a target="blank" href="Szabad utat engedek.html">
     <h2>29.	Szabad utat engedek	</h2>
 </a>
 
-<a target="blank" href="Számodra.html">
+<a target="blank" href="Számodra örök foghatatlan.html">
     <h2>30.	Számodra örök foghatatlan</h2>
 </a>
 
-<a target="blank" href="Tavaszi.html">
+<a target="blank" href="Tavaszi köszöntő.html">
     <h2>31.	Tavaszi köszöntő</h2>
 </a>
 
 <a target="blank" href="Örökbefogadásra várva.html">
     <h2>32.	Örökbefogadásra várva</h2>
 </a>
-<a target="blank" href="Az örök élet.html">
+<a target="blank" href="Az örök élet titka.html">
     <h2>33.	Az örök élet titka</h2>
 </a>
-<a target="blank" href="Mert én még.html">
+<a target="blank" href="Mert én még mindig.html">
     <h2>34.	Mert én még mindig</h2>
 </a>
 <a target="blank" href="Közöny a magányban.html">
     <h2>35.	Közöny a magányban</h2>
 </a>
-<a target="blank" href="Örökké fogva.html">
+<a target="blank" href="Örökké fogva tartó mámorszenvedéllyel.html">
     <h2>36.	Örökké fogva tartó mámorszenvedéllyel</h2>
 </a>
 
 <h1 class="cim">Isten</h1>
 
 
-<a target="blank" href="Késő esti.html">
+<a target="blank" href="Késő esti ima.html">
     <h2>37.	Késő esti ima</h2>
 </a>
 
-<a target="blank" href="epit.html">
+<a target="blank" href="epitsunk.html">
     <h2>38.	Építsünk új templomokat!</h2>
 </a>
 
-<a target="blank" href="A vándor.html">
+<a target="blank" href="A vándorszívek.html">
     <h2>39.	A vándorszívek</h2>
 </a>
 
-<a target="blank" href="Sivár.html">
+<a target="blank" href="Sivár puszta a létünk.html">
     <h2>40.	Sivár puszta a létünk</h2>
 </a>
 
-<a target="blank" href="Az isteni remény.html">
+<a target="blank" href="Az isteni reménysugár.html">
     <h2>41.	Az isteni reménysugár</h2>
 </a>
 
-<a target="blank" href="Ébredjünk.html">
+<a target="blank" href="Ébredjünk fel!.html">
     <h2>42.	Ébredjünk fel!</h2>
 </a>
 
-<a target="blank" href="Isten kegyes.html">
+<a target="blank" href="Isten kegyes kérése.html">
     <h2>43.	Isten kegyes kérése</h2>
 </a>
 
-<a target="blank" href="Leszáll majd.html">
+<a target="blank" href="Leszáll majd az ég.html">
     <h2>44.	Leszáll majd az ég</h2>
 </a>
 
-<a target="blank" href="Forgandó.html">
+<a target="blank" href="Forgandó a világ.html">
     <h2>45.	Forgandó a világ</h2>
 </a>
-<a target="blank" href="Az isteni.html">
+<a target="blank" href="Az isteni szerep.html">
     <h2>46.	Az isteni szerep</h2>
 </a>
-<a target="blank" href="A fény.html">
+<a target="blank" href="A fény útja.html">
     <h2>47.	A fény útja</h2>
 </a>
-<a target="blank" href="Rendel.html">
+<a target="blank" href="Rendeltetésünk.html">
     <h2>48.	Rendeltetésünk</h2>
 </a>
-<script src="vers.js"></script>
+<script src="versek.js"></script>
 </body>
 
 </html>
