--- a/vers.html
+++ b/vers.html
@@ -19,7 +19,7 @@
     <h1 class="cim">Filozófia</h1>
 
 
-<a target="blank" href="vajonn.html">
+<a target="blank" href="vajon.html">
     <h2>1. Vajon?</h2>
 </a>
 
